--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "main": "dist/bin/www",
   "scripts": {
-    "start": "npm install && node dist/bin/www",
+    "build": "tsc",
+    "start": "npm install && npm run build && node dist/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
